# CurveViewer

./: .clang-format  .clang-tidy  CMakeLists.txt  CurveWidget.cpp  CurveWidget.h  Dockerfile  MainWindow.cpp  MainWindow.h  README.md
resources/: LoopCurve.txt  ParabolaCurve.txt  SineCurve.txt
src/: CurveWidget.cpp  CurveWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
utils/: CurveLoader.cpp  CurveLoader.h
